--- a/EAM_3/acs_news.html
+++ b/EAM_3/acs_news.html
@@ -71,7 +71,7 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Αρχική</a></li>
+                        <li><a href="index.html">Αρχική</a></li>
                         <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
@@ -83,7 +83,7 @@
                             </div>
                         </li>
                         <li class="dropdown" >
-                            <a href="accesibility.html" class="dropbtn">Προσβασιμότητα</a>
+                            <a class="active" href="accesibility.html" class="dropbtn">Προσβασιμότητα</a>
                             <div class="dropdown-content">
                                 <a href="acs_instrc.html">Οδηγίες Πρόσβασης</a>
                                 <a href="acs_points.html">Προσβάσιμα Σημεία</a>
