--- a/EAM_3/buses.html
+++ b/EAM_3/buses.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Επικοινωνία</title>  
+    <title>ΟΑΣΑ Νέα-Ανακοινώσεις</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -31,6 +31,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css">
+    <script src="http://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
+
     <!-- Modernizer for Portfolio -->
     <script src="js/modernizer.js"></script>
 
@@ -38,6 +42,12 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
+    <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
+
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
 </head>
 <body class="realestate_version">
@@ -47,12 +57,12 @@
         <span class="loader"><span class="loader-inner"></span></span>
     </div><!-- end loader -->
     <!-- END LOADER -->
-   
+
     <!--HEADER-->
     <header class="header header_style_01">
         <nav class="megamenu navbar navbar-default">
             <div class="container-fluid">
-            <!--NAV-HEADER (logo button to index.php)-->
+               <!--NAV-HEADER (logo button to index.php)-->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -67,7 +77,7 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Αρχική</a></li>
+                        <li><a class="active" href="index.html">Αρχική</a></li>
                         <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
@@ -79,11 +89,10 @@
                             </div>
                         </li>
                         <li class="dropdown" >
-                            <a href="accesibility.html" class="dropbtn">Προσβασιμότητα</a>
+                            <a href="#" class="dropbtn">Προσβασιμότητα</a>
                             <div class="dropdown-content">
-                                <a href="acs_instrc.html">Οδηγίες Πρόσβασης</a>
-                                <a href="acs_points.html">Προσβάσιμα Σημεία</a>
-                                <a href="acs_news.html">Ανακοινώσεις</a>
+                                <a href="#">Σημεία Πρόσβασης</a>
+                                <a href="#">Ανακοινώσεις</a>
                             </div>
                         </li> 
                         <li class="dropdown" >
@@ -93,49 +102,49 @@
                                 <a href="org.html">Προφίλ Οργανισμού</a>
                             </div>
                         </li>   
-                        <li><a class="active" href="contact.html">Επικοινωνία</a></li>
-                        <li class="search-option">
-                            <button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
-                            <form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
-                                <input type="text" placeholder="Αναζήτηση...">
-                                <button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
-                            </form>
-                    </li> 
-                    <li>
-                        <div id="myModal" class="modal fade">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-body">
-                                        <button data-dismiss="modal" class="close">&times;</button>
-                                        <ul class="nav nav-tabs" role="tablist">
-                                            <li role="presentation" class="active">
-                                                <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
-                                            </li>
-                                            <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
-                                            </li>
-                                        </ul>
-                                        <div class="tab-content">
-                                            <div role="tabpanel" class="tab-pane active" id="home">
-                                                <form>
-                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                    <input class="btn login" type="submit" value="Είσοδος"/>
-                                                </form>
-                                            </div>
-                                            <div role="tabpanel" class="tab-pane" id="next">
-                                                <form>
-                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
-                                                    <input class="btn login" type="submit" value="Εγγραφή"/>
-                                                </form>
+                        <li><a href="contact.html">Επικοινωνία</a></li>
+						<li class="search-option">
+							<button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
+							<form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
+								<input type="text" placeholder="Αναζήτηση...">
+								<button class="p-color-bg"><i class="fa fa-search" aria-hidden="true"></i></button>
+							</form>
+                       </li> 
+                       <li>
+                            <div id="myModal" class="modal fade">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <button data-dismiss="modal" class="close">&times;</button>
+                                            <ul class="nav nav-tabs" role="tablist">
+                                                <li role="presentation" class="active">
+                                                    <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Σύνδεση</a>
+                                                </li>
+                                                <li role="presentation"><a href="#next" aria-controls="next" role="tab" data-toggle="tab">Εγγραφή</a>
+                                                </li>
+                                            </ul>
+                                            <div class="tab-content">
+                                                <div role="tabpanel" class="tab-pane active" id="home">
+                                                    <form>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input class="btn login" type="submit" value="Είσοδος"/>
+                                                    </form>
+                                                </div>
+                                                <div role="tabpanel" class="tab-pane" id="next">
+                                                    <form>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                    </form>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
+                            <button class="login-trigger" onclick="javascript:$('#myModal').modal('show');"><i class="fa fa-user" aria-hidden="true"></i></button>
                         </li>
                     </ul>
                 </div>
@@ -144,102 +153,47 @@
         </nav>
     </header>
     <!--end of HEADER-->
-	
-	<div class="all-title-box">
+
+    <div class="all-title-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Επικοινωνία</h2>
+					<h2>Λεωφορεία</h2>
 				</div>
 			</div>
 		</div>
-	</div>
-    
-    <!-- SECTION -->
-	<div id="support" class="section wb">
-        <div class="container">
-            <!-- Breadcrumbs -->
-			<nav id="breadcrumbs">
-				<ul>
-					<li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
-					<li>Επικοινωνία</li>
-				</ul>
-            </nav>
-            
-            <div class="section-title text-center">
-                <h3>Αίτημα για Επικοινωνία</h3>
-                <p class="lead">Οποιαδήποτε στιγμή μπορείτε να επικοινωνήσετε μαζί μας είτε τηλεφωνικώς, 
-                    είτε μέσω ηλεκτρονικής αλληλογραφίας, email, ακόμη και συμπληρώνοντας την παρακάτω φόρμα παραθέτοντας τον λόγο επικοινωνίας.
-                <br>Θα απαντήσουμε στο αίτημα σας όσο το δυνατόν γρηγορότερα και αποτελεσματικά μπορούμε!</p>
-            </div>
+    </div>
+
+    <!--SECOND SECTION-->
+	<div class="about-box">
+		<div class="container">
+                <!-- Breadcrumbs -->
+                <nav id="breadcrumbs">
+                    <ul>
+                        <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
+                        <li>Λεωφορεία</li>
+                    </ul>
+                </nav>
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4 wow slideInLeft hidden-xs hidden-sm">
                     <div class="contact_form">
-                        <div id="message"></div>
-                        <form id="contactform" class="row" action="contact.php" name="contactform" method="post">
-                            <fieldset class="row-fluid">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Επώνυμο">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="first_name" id="first_name" class="form-control" placeholder="Όνομα">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="email" name="email" id="email" class="form-control" placeholder="Email">
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="tel" name="phone" id="phone"  pattern="[0-9]{10}" class="form-control" placeholder="Τηλέφωνο">
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                                    <input type="text" name="subject" id="subject" class="form-control" placeholder="Θέμα">
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Δώστε λεπτομέρειες..."></textarea>
-                                </div>
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                                    <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 btn-block">Αποστολή αιτήματος!</button>
-                                </div>
-                            </fieldset>
-                        </form>
+                        <h3>Πληροφορίες Γραμμής</h3>
                     </div>
                 </div>
-				<div class="col-md-6">
-					<div class="right-box-contact">
-						<h4>Τηλέφωνο Επικοινωνίας</h4>
-						<div class="support-info">
-							<div class="info-title">
-								<i class="fa fa-phone" aria-hidden="true"></i>
-								210 8200999
-								<span>Ώρες λειτουργίας: 09:00 - 16:00</span>
-							</div>
-						</div>
-					</div>
-					<div class="right-box-contact">
-						<h4>Διεύθυνση</h4>
-						<div class="support-info">
-							<div class="info-title">
-								<i class="fa fa-map-marker" aria-hidden="true"></i>
-								Διεύθυνση
-								<span>Μετσόβου 15, Αθήνα 106 82</span>
-							</div>
-						</div>
-					</div>
-					<div class="right-box-contact">
-						<h4>Στείλτε μας τα σχόλιά σας</h4>
-						<div class="support-info">
-							<div class="info-title">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-								info@_oasa.gr
-								<span>Βοηθήστε μας να βελτιωθούμε!</span>
-							</div>
-						</div>
-					</div>
+
+                <div class="col-md-6">
+					<div class="item">
+                        <div class="single-feature" style="pointer-events: none; float: left;">
+                            <h1 style="float: left;"><i class="fa fa-question-circle"></i> Οδηγίες</h1>
+                            <h5 style="float: left;">Πληροφορίες γραμμής... Πληροφορίες γραμμής... Πληροφορίες γραμμής... Πληροφορίες γραμμής... Πληροφορίες γραμμής... Πληροφορίες γραμμής...</h5>
+                        </div>
+                    </div>
 				</div>
             </div>
         </div>
     </div>
-    <!-- end of SECTION -->
+    <!--END OF SECOND SECTION-->
 
     <!--FOOTER-->
     <footer class="footer">
@@ -265,7 +219,7 @@
                             <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
-							<li><a href="accesibility.html">Προσβασιμότητα</a></li>
+							<li><a href="#">Προσβασιμότητα</a></li>
 							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
 							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
@@ -306,19 +260,9 @@
     </footer>
     <!--end of FOOTER-->
 
-    <!-- COPYRIGHTS -->
-    <div class="copyrights">
-            <div class="container">
-                <div class="footer-distributed">
-                    <div class="footer-left">
-                        <p class="footer-company-name">2018 &copy;<a href="index.html"> ΟΑΣΑ</a>  Σχεδιασμός: <a href="https://html.design/">html design</a></p>
-                    </div>
-                </div>
-            </div><!-- end container -->
-    </div>
-    <!-- end of COPYRIGHTS -->
-
+    <!--SCROLL TO TOP-->
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
+    <!--end of SCROLL TO-->
 
     <!-- ALL JS FILES -->
     <script src="js/all.js"></script>
