--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -136,18 +136,22 @@
                                         </ul>
                                         <div class="tab-content">
                                             <div role="tabpanel" class="tab-pane active" id="home">
-                                                <form>
-                                                    <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                <form id="login-form" method="post" action="authen_login.php" >
+                                                    <input type="text" name="user_id" class="username form-control" placeholder="Email"/>
+                                                    <input type="password" name="user_pass" class="password form-control" placeholder="Συνθηματικό"/>
                                                     <input class="btn login" type="submit" value="Είσοδος"/>
                                                 </form>
                                             </div>
                                             <div role="tabpanel" class="tab-pane" id="next">
-                                                <form>
+                                                <form id="register-form" method="post" action="register.php" >
                                                     <input type="text" name="username" class="username form-control" placeholder="Email"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                    <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                    <input type="password" name="password1" class="password form-control" placeholder="Συνθηματικό"/>
+                                                    <input type="password" name="password2" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                    <input type="text" name="name" class="username form-control" placeholder="Όνομα"/>
+                                                    <input type="text" name="surname" class="username form-control" placeholder="Επώνυμο"/>
+                                                    <input type="text" name="address" class="username form-control" placeholder="Διεύθυνση"/>
                                                     <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                    <input class="btn login" type="reset" value="Καθαρισμός"/>
                                                 </form>
                                             </div>
                                         </div>
